err/ptftpd.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/netifaces-0.10.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ptftpd-1.2.dist-info'...
Listing './lib/python3.5/site-packages/ptftplib'...
Compiling './lib/python3.5/site-packages/ptftplib/bootpserver.py'...
***   File "./lib/python3.5/site-packages/ptftplib/bootpserver.py", line 356
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ptftplib/dhcpserver.py'...
***   File "./lib/python3.5/site-packages/ptftplib/dhcpserver.py", line 405
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ptftplib/pxeserver.py'...
***   File "./lib/python3.5/site-packages/ptftplib/pxeserver.py", line 93
    except tftpserver.TFTPServerConfigurationError, e:
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ptftplib/state.py'...
***   File "./lib/python3.5/site-packages/ptftplib/state.py", line 234
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ptftplib/tftpclient.py'...
***   File "./lib/python3.5/site-packages/ptftplib/tftpclient.py", line 179
    print 'Available commands:'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ptftplib/tftpserver.py'...
***   File "./lib/python3.5/site-packages/ptftplib/tftpserver.py", line 175
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
